@@ -1,4 +1,5 @@
 package com.oltpbenchmark.benchmarks.chbenchmark.queries;
+
 import com.oltpbenchmark.api.SQLStmt;
 import java.sql.Connection;
 import java.sql.ResultSet;
@@ -6,16 +7,21 @@ import java.sql.SQLException;
 import java.sql.Statement;
 
 public class Q15 extends GenericQuery {
+  
+  // Держим dummy SQLStmt для совместимости с GenericQuery
+  // Он нужен чтобы getName() работал правильно
+  private final SQLStmt dummyStmt = new SQLStmt("Q15");
+  
   @Override
   protected SQLStmt get_query() {
-    // Метод обязателен из-за GenericQuery, но здесь не используется
-    return null;
+    // Возвращаем dummy объект вместо null
+    return dummyStmt;
   }
   
   @Override
   public void run(Connection conn) throws SQLException {
-    // создаём уникальное имя для view, зависящее от потока
-    String viewName = "revenue_" + Thread.currentThread().threadId();
+    // Создаём уникальное имя для view, зависящее от потока
+    String viewName = "revenue_" + Thread.currentThread().getId(); // ⚠️ getId() вместо threadId()
     
     String createSQL =
         "CREATE VIEW " + viewName + " (supplier_no, total_revenue) AS "
@@ -31,10 +37,10 @@ public class Q15 extends GenericQuery {
         "SELECT su_suppkey, su_name, su_address, su_phone, total_revenue "
             + "FROM supplier, " + viewName + " "
             + "WHERE su_suppkey = supplier_no "
-            + "AND total_revenue = (select max(total_revenue) from " + viewName + ") "
+            + "AND total_revenue = (SELECT max(total_revenue) FROM " + viewName + ") "
             + "ORDER BY su_suppkey";
     
-    String dropSQL = "DROP VIEW " + viewName;
+    String dropSQL = "DROP VIEW IF EXISTS " + viewName;
     
     try (Statement stmt = conn.createStatement()) {
       try {
@@ -42,12 +48,16 @@ public class Q15 extends GenericQuery {
         // ВАЖНО: ResultSet нужно закрыть!
         try (ResultSet rs = stmt.executeQuery(querySQL)) {
           while (rs.next()) {
-            // Проходим по результатам
+            // Проходим по результатам (для совместимости с бенчмарком)
           }
         }
       } finally {
         // DROP всегда выполнится, даже если запрос упал
-        stmt.executeUpdate(dropSQL);
+        try {
+          stmt.executeUpdate(dropSQL);
+        } catch (SQLException e) {
+          // Игнорируем ошибку если VIEW уже не существует
+        }
       }
     }
   }
